# video-stt-translate-server

./: .gitignore  LICENSE  README.md  README.zh-CN.md  config.example.ini  pyproject.toml
scripts/: run_video_ja_srt.sh  run_video_ja_srt_whisperx.sh  run_video_ja_zh.sh
tests/: __init__.py
tests/e2e/: __init__.py  run_e2e_explicit_dag_flow.py  run_e2e_real_flow.py  run_e2e_shutdown_round.py  verify_e2e_logs.py  video_paths.txt
tests/unit/: test_api_archive.py  test_api_jobs.py  test_api_security_shutdown.py  test_artifact_cleanup_scheduler.py  test_config.py  test_config_bootstrap.py  test_dag_validation.py  test_db_schema_migration.py  test_e2e_driver.py  test_executors_cleanup.py  test_progress_store.py  test_repository_archive.py  test_repository_claim.py  test_repository_dag_enqueue.py  test_repository_dependency_payload.py  test_repository_enqueue.py  test_runtime_shutdown_status.py  test_stages.py  test_stt_effective_config_logging.py  test_translate_copy_back.py  test_translation_chunking.py  test_worker_recovery.py
whisper_stt/: transcribe_video.py  transcribe_video_whisperx.py  translate_srt_ja_to_zh.py
whisper_stt_service/: __init__.py  api.py  config.py  dag.py  db.py  executors.py  main.py  progress.py  repository.py  stages.py  workers.py
whisper_stt_service/api/: __init__.py  app.py  dependencies.py  schemas.py
whisper_stt_service/api/routes/: __init__.py  admin.py  jobs.py  queue.py
whisper_stt_service/core/: __init__.py  config.py  dag.py  progress.py  stages.py
whisper_stt_service/executor/: __init__.py  common.py  extract.py  stt.py  stt_whisperx.py  translate.py
whisper_stt_service/repo/: __init__.py  database.py  dependency_payload.py  job_repository.py  models.py
whisper_stt_service/service/: __init__.py  bootstrap.py  runtime.py
