[project]
name = "video-stt-translate-server"
version = "0.2.0"
description = "Whisper STT + translation service for queued video processing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "faster-whisper>=1.0.3",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "uvicorn>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]
gpu = [
    "torch==2.3.1+cu121",
    "torchaudio==2.3.1+cu121",
    "triton==2.3.1; platform_system == 'Linux'",
    "onnxruntime-gpu==1.23.2",
    "nvidia-cublas-cu12==12.1.3.1; platform_system == 'Linux'",
    "nvidia-cuda-cupti-cu12==12.1.105; platform_system == 'Linux'",
    "nvidia-cuda-nvrtc-cu12==12.1.105; platform_system == 'Linux'",
    "nvidia-cuda-runtime-cu12==12.1.105; platform_system == 'Linux'",
    "nvidia-cudnn-cu12==8.9.2.26; platform_system == 'Linux'",
    "nvidia-cufft-cu12==11.0.2.54; platform_system == 'Linux'",
    "nvidia-curand-cu12==10.3.2.106; platform_system == 'Linux'",
    "nvidia-cusolver-cu12==11.4.5.107; platform_system == 'Linux'",
    "nvidia-cusparse-cu12==12.1.0.106; platform_system == 'Linux'",
    "nvidia-nccl-cu12==2.20.5; platform_system == 'Linux'",
    "nvidia-nvjitlink-cu12==12.8.93; platform_system == 'Linux'",
    "nvidia-nvtx-cu12==12.1.105; platform_system == 'Linux'",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchaudio = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
