[project]
name = "video-stt-translate-server"
version = "0.3.0"
description = "Whisper STT + translation service for queued video processing"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.110.0",
    "faster-whisper>=1.0.3",
    "whisperx==3.8.5",
    "transformers==4.57.6",
    "onnxruntime==1.23.2",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "uvicorn>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]
gpu = [
    "torch==2.8.0+cu128",
    "torchaudio==2.8.0+cu128",
    "triton==3.4.0; platform_system == 'Linux'",
    "onnxruntime-gpu==1.23.2",
    "nvidia-cublas-cu12==12.8.4.1; platform_system == 'Linux'",
    "nvidia-cuda-cupti-cu12==12.8.90; platform_system == 'Linux'",
    "nvidia-cuda-nvrtc-cu12==12.8.93; platform_system == 'Linux'",
    "nvidia-cuda-runtime-cu12==12.8.90; platform_system == 'Linux'",
    "nvidia-cudnn-cu12==9.10.2.21; platform_system == 'Linux'",
    "nvidia-cufft-cu12==11.3.3.83; platform_system == 'Linux'",
    "nvidia-curand-cu12==10.3.9.90; platform_system == 'Linux'",
    "nvidia-cusolver-cu12==11.7.3.90; platform_system == 'Linux'",
    "nvidia-cusparse-cu12==12.5.8.93; platform_system == 'Linux'",
    "nvidia-nccl-cu12==2.27.3; platform_system == 'Linux'",
    "nvidia-nvjitlink-cu12==12.8.93; platform_system == 'Linux'",
    "nvidia-nvtx-cu12==12.8.90; platform_system == 'Linux'",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
